[package]
name = "mqtt-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15"
rumqttc = "0.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
[dependencies.uuid]
version = "1.22.0"
# Lets you generate random UUIDs
features = [
    "v4",
]